more alignment and font fixes in css

--- a/style.css
+++ b/style.css
@@ -1,27 +1,24 @@
 body {
     background-color: #979493;
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 100px 50px 300px 300px 50px;
+    grid-template-columns: 1;
+    grid-template-rows: repeat(8, 300px);
 }
 h1 {
     font-family: 'Barlow Condensed', sans-serif;
     background-color: #51504F;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     justify-content: center;
     grid-row: 1;
-    grid-column: 2;
+    color: white;
+    font-size: 100px;
 }
 nav {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     justify-content: center;
     grid-row: 2;
-    grid-column: 2;
 }
 ul {
-
 }
 li {
     list-style-type: none;
@@ -30,52 +27,70 @@ li {
 }
 .projects {
     font-family: 'Poiret One', cursive;
+    display: grid;
+    font-weight: bold;
+    font size: 50 px;
+    color: white;
+    border: 3px solid white;
+    margin: 0 auto;
+}
+div {
 }
 .project-one {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/dash-project-1.jpg);
     height: 300px;
     width: 450px;
     background-size: cover;
+    grid-row: 3;
 }
 .project-two {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/dash-project-2.jpg);
     height: 300px;
     width: 450px;
     background-size: cover;
+    grid-row: 4;
 }
 .project-three {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/dash-project-3.jpg);
     height: 300px;
     width: 450px;
     background-size: cover;
+    grid-row: 5;
 }
 .project-four {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
-    background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/airbnbproject.jpg);
+    background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/airbnb-project.jpg);
     height: 300px;
     width: 450px;
     background-size: cover;
+    grid-row: 6;
 }
 .project-five {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     background-image: url(/Users/ellisonrio/sei/sandbox/ellisonr.github.io/wendybite-project.jpg);
     height: 300px;
     width: 450px;
     background-size: cover;
+    grid-row: 7;
 }
 .footer {
     font-family: 'Tulpen One', cursive;
+    display: grid;
+    justify-content: center;
+    grid-row: 8;
+    background-color: #51504F;
+    color: white;
 }
